tests/baselines/reference/staticsNotInScopeInClodule.errors.txt
==== tests/cases/compiler/staticsNotInScopeInClodule.ts (1 errors) ====
    class Clod {
        static x = 10;
    }
    
    module Clod {
        var p = x; // x isn't in scope here
                ~
!!! staticsNotInScopeInClodule.ts(6,13): error TS2095: Could not find symbol 'x'.
    }